[package]
name = "rust_raytrace"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
cudarc = { version = "0.12", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pollster = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
wgpu = "0.19"

[features]
cuda = ["dep:cudarc", "cudarc/cuda-version-from-build-system"]
cuda-12060 = ["dep:cudarc", "cudarc/cuda-12060"]
cuda-12050 = ["dep:cudarc", "cudarc/cuda-12050"]
cuda-12040 = ["dep:cudarc", "cudarc/cuda-12040"]
cuda-12030 = ["dep:cudarc", "cudarc/cuda-12030"]
cuda-12020 = ["dep:cudarc", "cudarc/cuda-12020"]
cuda-12010 = ["dep:cudarc", "cudarc/cuda-12010"]
cuda-12000 = ["dep:cudarc", "cudarc/cuda-12000"]
cuda-11080 = ["dep:cudarc", "cudarc/cuda-11080"]
cuda-11070 = ["dep:cudarc", "cudarc/cuda-11070"]
cuda-11060 = ["dep:cudarc", "cudarc/cuda-11060"]
cuda-11050 = ["dep:cudarc", "cudarc/cuda-11050"]
cuda-11040 = ["dep:cudarc", "cudarc/cuda-11040"]
